Change rabbit to mosquitto

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,32 @@
 version: "3"
 services:
-  rabbitmq:
-    build:
-      context: ./robot/
-      dockerfile: Dockerfile-rabbitmq
-    environment:
-      RABBITMQ_DEFAULT_USER: robot
-      RABBITMQ_DEFAULT_PASS: 2a55f70a841f18b97c3a7db939b7adc9e34a0f1b
+#  rabbitmq:
+#    build:
+#      context: ./robot/
+#      dockerfile: Dockerfile-rabbitmq
+#    environment:
+#      RABBITMQ_DEFAULT_USER: robot
+#      RABBITMQ_DEFAULT_PASS: 2a55f70a841f18b97c3a7db939b7adc9e34a0f1b
+#    restart: always
+#    ports:
+#      - "5672:5672"
+#      - "1883:1883"
+  mosquitto:
+    image: eclipse-mosquitto
     restart: always
     ports:
-      - "5672:5672"
       - "1883:1883"
   robot:
     build:
       context: ./robot/
       dockerfile: Dockerfile-robot
     environment:
-      RABBITMQ_DEFAULT_USER: robot
-      RABBITMQ_DEFAULT_PASS: 2a55f70a841f18b97c3a7db939b7adc9e34a0f1b
       PYTHONUNBUFFERED: 1
   camera:
     build:
       context: ./robot/
       dockerfile: Dockerfile-camera
     environment:
-      RABBITMQ_DEFAULT_USER: robot
-      RABBITMQ_DEFAULT_PASS: 2a55f70a841f18b97c3a7db939b7adc9e34a0f1b
       PYTHONUNBUFFERED: 1
   motors:
     build:
@@ -33,7 +34,5 @@ services:
       dockerfile: Dockerfile-motors
     privileged: true
     environment:
-      RABBITMQ_DEFAULT_USER: robot
-      RABBITMQ_DEFAULT_PASS: 2a55f70a841f18b97c3a7db939b7adc9e34a0f1b
       PYTHONUNBUFFERED: 1
 
