--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     build:
       context: ./robot/
       dockerfile: Dockerfile-camera
+    privileged: true
     environment:
       PYTHONUNBUFFERED: 1
   motors:
