--- a/robot/Dockerfile-camera
+++ b/robot/Dockerfile-camera
@@ -7,4 +7,5 @@ COPY src/ /app/
 
 RUN pip install -r /app/requirements.txt
 
-ENTRYPOINT ["python3", "/app/camera.py"]
+#ENTRYPOINT ["python3", "/app/camera.py"]
+ENTRYPOINT ["sleep", "10000"]
