--- a/robot/Dockerfile-camera
+++ b/robot/Dockerfile-camera
@@ -1,5 +1,4 @@
 FROM sixsq/opencv-python:latest
-#FROM python:3.10.0a1-slim
 
 
 RUN mkdir /app
@@ -7,5 +6,5 @@ COPY src/ /app/
 
 RUN pip install -r /app/requirements.txt
 
-#ENTRYPOINT ["python3", "/app/camera.py"]
-ENTRYPOINT ["sleep", "10000"]
+ENTRYPOINT ["python3", "/app/camera.py"]
+#ENTRYPOINT ["sleep", "10000"]
